--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  padding: 1em 2em;
+  background-color: coral;
+  border: none;
   color: white;
+  border-radius: 1000px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+button.minor {
+  background-color: transparent;
+  border: 1px solid coral;
+  color: coral;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  padding: 1em 2em;
+  border: 1px solid #e0e0e0;
+  border-radius: 1000px;
+  box-sizing: border-box;
+  margin: 0;
 }
