--- a/src/components/styles/editArticle.css
+++ b/src/components/styles/editArticle.css
@@ -13,7 +13,7 @@
   top: 0;
   background-color: white;
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 2;
 }
 
 .editHeader > input {
@@ -46,7 +46,10 @@
 
 .ql-toolbar.ql-snow {
   position: sticky;
-  top: 4.2em;
+  width: 95%;
+  margin: auto;
+  box-sizing: border-box;
+  top: 4.5em;
   margin-bottom: 2em;
   border: none;
   background-color: white;
@@ -73,7 +76,7 @@
   display: block;
   position: absolute;
   padding: 3em;
-  top: -1px;
+  top: -10px;
   left: -1px;
   right: -1px;
   bottom: -1px;
