Add super admin privileges

--- a/src/components/styles/articleList.css
+++ b/src/components/styles/articleList.css
@@ -9,6 +9,15 @@
   margin: auto;
   gap: 20px;
 }
+.articleList > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  max-width: 120ch;
+  width: 100%;
+}
 
 .newArticleButton {
   margin-top: 2em;
